// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomBar Render items using descriptors 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
          },
          Object {
            "flex": 0,
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        appearance="default"
        style={
          Array [
            Object {
              "backgroundColor": "#EDF1F7",
              "height": 1,
            },
            undefined,
          ]
        }
      />
      <View
        appearance="noIndicator"
        descriptors={
          Object {
            "home": Object {
              "options": Object {
                "title": "Welcome",
              },
            },
          }
        }
        navigation={
          Object {
            "navigate": [Function],
          }
        }
        onSelect={[Function]}
        selectedIndex={0}
        state={
          Object {
            "history": Array [],
            "index": 0,
            "key": "home",
            "routeNames": Array [
              "home",
              "account",
            ],
            "routes": Array [
              Object {
                "key": "home",
                "name": "Home",
              },
              Object {
                "key": "account",
                "name": "Account",
              },
            ],
            "stale": false,
            "type": "tab",
          }
        }
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "minHeight": 56,
              "paddingVertical": 4,
            },
            Object {
              "flexDirection": "row",
            },
            Object {
              "paddingBottom": 24,
              "paddingTop": 12,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            appearance="default"
            category="p1"
            style={
              Array [
                Object {
                  "color": "#222B45",
                  "fontFamily": "System",
                  "fontSize": 15,
                  "fontWeight": "400",
                },
                Object {
                  "color": "#3366FF",
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "marginVertical": 2,
                },
              ]
            }
          >
            Welcome
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            appearance="default"
            category="p1"
            style={
              Array [
                Object {
                  "color": "#222B45",
                  "fontFamily": "System",
                  "fontSize": 15,
                  "fontWeight": "400",
                },
                Object {
                  "color": "#8F9BB3",
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "marginVertical": 2,
                },
              ]
            }
          >
            Account
          </Text>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`BottomBar Render items without descriptors 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
          },
          Object {
            "flex": 0,
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        appearance="default"
        style={
          Array [
            Object {
              "backgroundColor": "#EDF1F7",
              "height": 1,
            },
            undefined,
          ]
        }
      />
      <View
        appearance="noIndicator"
        descriptors={Object {}}
        navigation={
          Object {
            "navigate": [Function],
          }
        }
        onSelect={[Function]}
        selectedIndex={0}
        state={
          Object {
            "history": Array [],
            "index": 0,
            "key": "home",
            "routeNames": Array [
              "home",
              "account",
            ],
            "routes": Array [
              Object {
                "key": "home",
                "name": "Home",
              },
              Object {
                "key": "account",
                "name": "Account",
              },
            ],
            "stale": false,
            "type": "tab",
          }
        }
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "minHeight": 56,
              "paddingVertical": 4,
            },
            Object {
              "flexDirection": "row",
            },
            Object {
              "paddingBottom": 24,
              "paddingTop": 12,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            appearance="default"
            category="p1"
            style={
              Array [
                Object {
                  "color": "#222B45",
                  "fontFamily": "System",
                  "fontSize": 15,
                  "fontWeight": "400",
                },
                Object {
                  "color": "#3366FF",
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "marginVertical": 2,
                },
              ]
            }
          >
            Home
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            appearance="default"
            category="p1"
            style={
              Array [
                Object {
                  "color": "#222B45",
                  "fontFamily": "System",
                  "fontSize": 15,
                  "fontWeight": "400",
                },
                Object {
                  "color": "#8F9BB3",
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "marginVertical": 2,
                },
              ]
            }
          >
            Account
          </Text>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
